www/css/index.css
* {
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
}

body {
    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
    background-color:#E4E4E4;
    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
    font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
    font-size:12px;
    height:100vh;
    margin:0px;
    padding:0px;
    /* Padding to avoid the "unsafe" areas behind notches in the screen */
    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px);
    width:100%;
}

/* Portrait layout (default) */
.app {
    text-align: center;
    padding: 20px;
}

/* Landscape layout (with min-width) */
@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
    .app {
        background-position:left center;
        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
                                      /* offset horizontal: half of image width and text area width */
    }
}

h1 {
    font-size:24px;
    font-weight:normal;
    margin:0px;
    overflow:visible;
    padding:0px;
    text-align:center;
}

.event {
    border-radius:4px;
    -webkit-border-radius:4px;
    color:#FFFFFF;
    font-size:12px;
    margin:0px 30px;
    padding:2px 0px;
}

.event.listening {
    background-color:#333333;
    display:block;
}

.event.received {
    background-color:#4B946A;
    display:none;
}

@keyframes fade {
    from { opacity: 1.0; }
    50% { opacity: 0.4; }
    to { opacity: 1.0; }
}

@-webkit-keyframes fade {
    from { opacity: 1.0; }
    50% { opacity: 0.4; }
    to { opacity: 1.0; }
}

.blink {
    animation:fade 3000ms infinite;
    -webkit-animation:fade 3000ms infinite;
}

.hidden {
    display: none;
}

#add-form {
    background-color: aquamarine;
    position: absolute;
    padding: 20px;
    margin: 5%;
    border: 1px solid white;
}

#showFormButton {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: red;
    position: sticky;
    display: block;
    float: right;
}

.img-fluid {
  max-width: 100%;
  width: auto;
  height: auto;
}

video[src="#"] {
  display: none;
}

#map {
  width: 100%;
  height: 400px;
}

.timeline-element {
    position: relative;
    height: 100px;
    margin: 20px;
    display: block;
    background: rgba(0, 150, 0, 0.5);
    padding: 20px;
    border-radius: 5px;
}

.bullet {
    width: 20px;
    height: 20px;
    position: absolute;
    left: -10px;
    top: 60px;
    background: white;
    border: 1px solid green;
    border-radius: 50%;
}

